# MedicalCosts

./: .gitignore  README.md  pyproject.toml
notebook/: eda.ipynb  model.ipynb
